# Spatial-Representation-Analysis-of-Vision-Transformers-for-Satellite-Image-Classification

./: .env.example  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_CRITERIA_DEMO.md  AGENTS.md  CALIBRATION_ACCEPTANCE_CRITERIA.md  CALIBRATION_GUIDE.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_HUGGINGFACE.md  Dockerfile.nicegui  Dockerfile.runpod  Makefile  QUICKSTART.md  README.md  README_HF.md  RUNPOD_TODO.md  SETUP_NICEGUI_CONTAINER.md  SETUP_RUNPOD.md  SPATIAL_ROBUSTNESS_GUIDE.md  STORY_4_1_ACCEPTANCE_CRITERIA.md  api_server.py  app.py  demo_calibration.py  demo_spatial_robustness.py  docker-compose.yml  download.py  evaluate_calibration.py  evaluate_spatial_robustness.py  nicegui_app.py  pyproject.toml  requirements-api.txt  requirements-nicegui.txt  requirements.txt  run_comparison.py  setup_nicegui_container.sh  setup_nicegui_remote.sh  user stories.md
.dvc/: config
.streamlit/: config.toml
checkpoints/: .gitignore  resnet50.pt.dvc  vit_base.pt.dvc
configs/: experiment.yaml  test_swin.yaml
data/: eurosat.dvc
docs/: benchmark-comparison.md  dvc-remote.md
eurosat_vit_analysis/: __init__.py  calibration.py  data.py  experiment.py  inference.py  models.py  robustness.py  spatial_robustness.py  train.py
reports/: fgsm_report.json
scripts/: configure_dvc.sh  install_python311_poetry.sh
tests/: test_attention_cli.py  test_attention_hook.py  test_attention_overlay.py  test_attention_rollout.py  test_augmentations.py  test_calibration.py  test_data.py  test_e2e.py  test_experiment.py  test_fgsm_cli.py  test_inference.py  (+4 more)
(+12 files in other folders)
